# opengl-hpp

./: .gitignore  CMakeLists.txt  README.md
include/openglhpp/: gl_enums.hpp  gl_to_string.hpp  gl_types.hpp  opengl.hpp  platform.hpp
src/: opengl.cpp
